--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,8 +21,11 @@ jobs:
       with:
         go-version: '1.12'
 
+    - name: Install
+      run: go install -v
+
     - name: Build
-      run: go build -v ./...
+      run: go build -v
 
     - name: Test
-      run: go test -v ./...
+      run: go test -v
