--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -44,9 +44,16 @@ jobs:
     - name: Artifacts Scan
       run: echo artifacts scan
 
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - name: Unit Test
+      run: echo unit test
+
   deploy:
     runs-on: ubuntu-latest
-    needs: scan
+    needs: [scan, test]
     steps:
     - name: Prepare
       run: echo prepare
