--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -49,7 +49,13 @@ jobs:
     needs: build
     steps:
     - name: Unit Test
-      run: echo unit test
+      run: |
+        echo 'success' > test_result.txt
+    - name: Upload Report
+      uses: actions/upload-artifact@v3.1.3
+      with:
+        name: test_report
+        path: test_result.txt
 
   deploy:
     runs-on: ubuntu-latest
