--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -47,6 +47,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
     needs: build
+    environment:
+      name: production
+      url: https://github.com
     outputs:
       result: success
     steps:
