--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -48,7 +48,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: production
+      name: staging
       url: https://github.com
     outputs:
       result: success
@@ -69,6 +69,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: [scan, test]
+    environment:
+      name: production
+      url: https://github.com
     steps:
     - name: Prepare
       run: echo prepare
